Bug 82681 - EDITING: Draw crashes when copying table row
Summary: EDITING: Draw crashes when copying table row
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other Linux (All)
: high major
Assignee: Katarina Behrens
URL:
Whiteboard: BSA target:4.4.0 target:4.3.6
Keywords: bisected, haveBacktrace, regression
: 82816 82909 84801 85128 88188 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-15 21:20 UTC by Oli Boorman
Modified: 2015-06-08 14:25 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Test Document (15.51 KB, application/vnd.oasis.opendocument.graphics)
2014-08-15 21:20 UTC, Oli Boorman
Details
bt with master sources (10.43 KB, text/plain)
2014-08-16 07:30 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oli Boorman 2014-08-15 21:20:51 UTC
Created attachment 104696 [details]
Test Document

Problem description: 

Steps to reproduce:
1. Open the attached test file with Draw
2. Select both cells in the second row of the table (with "Row 1" written in)
3. Press Ctrl+C to copy to the Clipboard

Current behavior:
LibreOffice crashes

Also observed with the same document in LibreOffice 4.3.0.3.

              
Operating System: Ubuntu
Version: 4.3.0.4 release
Comment 1 Julien Nabet 2014-08-16 07:30:38 UTC
Created attachment 104711 [details]
bt with master sources

On pc Debian x86-64 with master sources updated yesterday, I could reproduce the problem.
I attached bt.
Comment 2 Julien Nabet 2014-08-16 07:31:42 UTC
LO Debian package 4.2.6 is ok=>regression.
=> increase importance.
Comment 3 Katarina Behrens 2014-08-19 15:48:52 UTC
I'm gonna look into this. If I don't find any solution in some 3 days, I'll bounce back to default assignee.
Comment 4 Katarina Behrens 2014-08-21 06:38:49 UTC
sfxitemsets are hard
Comment 5 raal 2014-08-24 20:00:19 UTC
 642edb6eec6b6ba276c33b60cb38d56411e70f4a is the first bad commit
commit 642edb6eec6b6ba276c33b60cb38d56411e70f4a
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue May 20 14:45:24 2014 +0000

    source-hash-2bac61013e57013bccac8c9d76482b34b5db7f69
    
    commit 2bac61013e57013bccac8c9d76482b34b5db7f69
    Author:     Thomas Arnhold <thomas@arnhold.org>
    AuthorDate: Sat May 10 18:19:39 2014 +0200
    Commit:     Thomas Arnhold <thomas@arnhold.org>
    CommitDate: Sun May 11 01:55:39 2014 +0200
    
        fix-includes.pl: sc
    
        Change-Id: Iade3fedac5d2f8e978b7dd9c30f001d7d1564946

:100644 100644 8f7b406390da8ecd41a0a0703ccb3c596d0270ad 7676516ae2308ce13b4a9a89ad5bd4de2cefa380 M	ccache.log
:100644 100644 100b1b3f429b84659c9ea89781c7af862b5717ac c796aef63228c8907475fa817076f337fee7dc5a M	commitmsg
:100644 100644 3feb51566ae73b1658d73efe9aa7c8d7fac0e397 ade30f1e4fe61fed4f3695ed7e0e630aa6b58826 M	make.log
:040000 040000 0f190a6bc7977d598e6b83e40329fd725757c977 9595318cb9a2736916f60d50dfdf3bcefce1781a M	opt

git bisect log
# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
# good: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect good a900e72b6357882284c5955bdf939bf14269f5fb
# skip: [e80660c5a1d812cd04586dae1f22767fc3778c4a] source-hash-07c60c8ee2d1465544a6a39e57bc06b3690b8dfb
git bisect skip e80660c5a1d812cd04586dae1f22767fc3778c4a
# good: [df9bcaed2faa2a8d11b19f877cdff3a12a887278] source-hash-6ba9692d8bbe3e3c245aca9a7c928e81178d05f1
git bisect good df9bcaed2faa2a8d11b19f877cdff3a12a887278
# good: [741197a13a361480f59eeb3bd1401f984f49f1c0] source-hash-9a61470eb1fa161cba70f2e9c4ea8817dc7f617e
git bisect good 741197a13a361480f59eeb3bd1401f984f49f1c0
# bad: [882db5e268e28962bdf805c820a5e031b0df9936] source-hash-383dccc094f8c8c07b4298ce0b7406d18cd61cee
git bisect bad 882db5e268e28962bdf805c820a5e031b0df9936
# good: [17f897f0e3734070f0e5c6abd39f2f907f42ac86] source-hash-4041263bde64dcc9a9a225d7f5a171f3b0455724
git bisect good 17f897f0e3734070f0e5c6abd39f2f907f42ac86
# good: [5c9e81ec77cd98f952434decf83ec9820d736e56] source-hash-94e3f3e5015e53b5f3c8e5775b668e0bc12ab457
git bisect good 5c9e81ec77cd98f952434decf83ec9820d736e56
# bad: [642edb6eec6b6ba276c33b60cb38d56411e70f4a] source-hash-2bac61013e57013bccac8c9d76482b34b5db7f69
git bisect bad 642edb6eec6b6ba276c33b60cb38d56411e70f4a
# first bad commit: [642edb6eec6b6ba276c33b60cb38d56411e70f4a] source-hash-2bac61013e57013bccac8c9d76482b34b5db7f69
Comment 6 David Tardon 2014-08-28 07:48:54 UTC
*** Bug 82816 has been marked as a duplicate of this bug. ***
Comment 7 David Tardon 2014-08-29 07:12:20 UTC
*** Bug 82909 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-09-05 15:44:24 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a784c33fd48eeb3394dc63610e384cf866233093

fdo#82681: return IsUserDefined w/o negation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Andras Timar 2014-11-26 15:27:17 UTC
*** Bug 84801 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2014-11-26 23:48:27 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ec8beb2fa279b8d7b1efbd9f5414895b17dfbe8b&h=libreoffice-4-3

fdo#82681: return IsUserDefined w/o negation

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2015-02-06 13:19:10 UTC
*** Bug 85128 has been marked as a duplicate of this bug. ***
Comment 13 David Tardon 2015-06-08 14:25:36 UTC
*** Bug 88188 has been marked as a duplicate of this bug. ***