fdo#82681: return IsUserDefined w/o negation

when the predicate is called StyleSheetIsUserDefinedPredicate

Returning negation thereof somewhere, somehow, corrupts one of
SfxItem pools. Thus, invalid read happens and crashes Impress
and Draw.

Now the loop in SdStyleSheetPool::UpdateStdNames does nothing
(it iterates through user-defined styles, but its body does
something for non-user-defined styles), so more investigation
here is needed.

This is partial revert of commit 3440766f0ad43454287a874b5fd34b6f2af6bdf1

Change-Id: I06f0da320c49674dac2adf43b7c374babbdadb57